Preventing shifting of content when there is no sc

--- a/css/styles.css
+++ b/css/styles.css
@@ -11553,6 +11553,8 @@ body,
 html {
   height: 100%;
   max-width: 100%;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 .bg-gradient-primary-to-secondary {
